Meta2 (copy)/y.output
Terminals unused in grammar

    RESERVED


Grammar

    0 $accept: Start $end

    1 Start: Start FunctionDefinition
    2      | Start FunctionDeclaration
    3      | Start Declaration
    4      | FunctionDefinition
    5      | FunctionDeclaration
    6      | Declaration

    7 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

    8 FunctionBody: LBRACE DeclarationList StatementList RBRACE
    9             | LBRACE DeclarationList RBRACE
   10             | LBRACE StatementList RBRACE
   11             | LBRACE RBRACE
   12             | LBRACE error RBRACE

   13 DeclarationList: DeclarationList Declaration
   14                | Declaration

   15 StatementList: StatementList ErrStatement
   16              | Statement

   17 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI

   18 FunctionDeclarator: AstList ID LPAR ParameterList RPAR
   19                   | ID LPAR ParameterList RPAR

   20 ParameterList: ParameterList COMMA ParameterDeclaration
   21              | ParameterDeclaration

   22 ParameterDeclaration: TypeSpec AstList ID
   23                     | TypeSpec ID
   24                     | TypeSpec AstList
   25                     | TypeSpec

   26 Declaration: TypeSpec DeclaratorList SEMI
   27            | error SEMI

   28 DeclaratorList: DeclaratorList COMMA Declarator
   29               | Declarator

   30 TypeSpec: CHAR
   31         | INT
   32         | VOID

   33 Declarator: AstList ID LSQ INTLIT RSQ
   34           | ID LSQ INTLIT RSQ
   35           | AstList ID
   36           | ID

   37 AstList: AstList AST
   38        | AST

   39 ErrStatement: ExprOpt SEMI
   40             | LBRACE StatList RBRACE
   41             | LBRACE RBRACE
   42             | LBRACE error RBRACE
   43             | IF LPAR GeneralExpr RPAR ErrStatement
   44             | IF LPAR GeneralExpr RPAR ErrStatement ELSE ErrStatement
   45             | FOR LPAR ExprOpt SEMI ExprOpt SEMI ExprOpt RPAR ErrStatement
   46             | RETURN ExprOpt SEMI
   47             | error SEMI

   48 Statement: ExprOpt SEMI
   49          | LBRACE StatList RBRACE
   50          | LBRACE RBRACE
   51          | LBRACE error RBRACE
   52          | IF LPAR GeneralExpr RPAR ErrStatement
   53          | IF LPAR GeneralExpr RPAR ErrStatement ELSE ErrStatement
   54          | FOR LPAR ExprOpt SEMI ExprOpt SEMI ExprOpt RPAR ErrStatement
   55          | RETURN ExprOpt SEMI

   56 StatList: StatList ErrStatement
   57         | ErrStatement

   58 ExprOpt: GeneralExpr
   59        | %empty

   60 GeneralExpr: GeneralExpr COMMA Expr
   61            | Expr

   62 Expr: Expr ASSIGN Expr
   63     | Expr AND Expr
   64     | Expr OR Expr
   65     | Expr EQ Expr
   66     | Expr NE Expr
   67     | Expr LT Expr
   68     | Expr GT Expr
   69     | Expr LE Expr
   70     | Expr GE Expr
   71     | Expr PLUS Expr
   72     | Expr MINUS Expr
   73     | Expr AST Expr
   74     | Expr DIV Expr
   75     | Expr MOD Expr
   76     | AMP Expr
   77     | AST Expr
   78     | PLUS Expr
   79     | MINUS Expr
   80     | NOT Expr
   81     | Expr LSQ GeneralExpr RSQ
   82     | ID LPAR ExprList RPAR
   83     | ID LPAR RPAR
   84     | ID LPAR error RPAR
   85     | ID
   86     | INTLIT
   87     | CHRLIT
   88     | STRLIT
   89     | LPAR GeneralExpr RPAR
   90     | LPAR error RPAR

   91 ExprList: ExprList COMMA Expr
   92         | Expr


Terminals, with rules where they appear

    $end (0) 0
    error (256) 12 27 42 47 51 84 90
    AMP (258) 76
    AND (259) 63
    ASSIGN (260) 62
    AST (261) 37 38 73 77
    CHAR (262) 30
    COMMA (263) 20 28 60 91
    DIV (264) 74
    ELSE (265) 44 53
    EQ (266) 65
    FOR (267) 45 54
    GE (268) 70
    GT (269) 68
    IF (270) 43 44 52 53
    INT (271) 31
    LBRACE (272) 8 9 10 11 12 40 41 42 49 50 51
    LE (273) 69
    LPAR (274) 18 19 43 44 45 52 53 54 82 83 84 89 90
    LSQ (275) 33 34 81
    LT (276) 67
    MINUS (277) 72 79
    MOD (278) 75
    NE (279) 66
    NOT (280) 80
    OR (281) 64
    PLUS (282) 71 78
    RBRACE (283) 8 9 10 11 12 40 41 42 49 50 51
    RETURN (284) 46 55
    RPAR (285) 18 19 43 44 45 52 53 54 82 83 84 89 90
    RSQ (286) 33 34 81
    SEMI (287) 17 26 27 39 45 46 47 48 54 55
    VOID (288) 32
    RESERVED <token> (289)
    ID <token> (290) 18 19 22 23 33 34 35 36 82 83 84 85
    INTLIT <token> (291) 33 34 86
    CHRLIT <token> (292) 87
    STRLIT <token> (293) 88
    IFX (294)


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    Start <node> (41)
        on left: 1 2 3 4 5 6
        on right: 0 1 2 3
    FunctionDefinition <node> (42)
        on left: 7
        on right: 1 4
    FunctionBody <node> (43)
        on left: 8 9 10 11 12
        on right: 7
    DeclarationList <node> (44)
        on left: 13 14
        on right: 8 9 13
    StatementList <node> (45)
        on left: 15 16
        on right: 8 10 15
    FunctionDeclaration <node> (46)
        on left: 17
        on right: 2 5
    FunctionDeclarator <node> (47)
        on left: 18 19
        on right: 7 17
    ParameterList <node> (48)
        on left: 20 21
        on right: 18 19 20
    ParameterDeclaration <node> (49)
        on left: 22 23 24 25
        on right: 20 21
    Declaration <node> (50)
        on left: 26 27
        on right: 3 6 13 14
    DeclaratorList <node> (51)
        on left: 28 29
        on right: 26 28
    TypeSpec <node> (52)
        on left: 30 31 32
        on right: 7 17 22 23 24 25 26
    Declarator <node> (53)
        on left: 33 34 35 36
        on right: 28 29
    AstList <node> (54)
        on left: 37 38
        on right: 18 22 24 33 35 37
    ErrStatement <node> (55)
        on left: 39 40 41 42 43 44 45 46 47
        on right: 15 43 44 45 52 53 54 56 57
    Statement <node> (56)
        on left: 48 49 50 51 52 53 54 55
        on right: 16
    StatList <node> (57)
        on left: 56 57
        on right: 40 49 56
    ExprOpt <node> (58)
        on left: 58 59
        on right: 39 45 46 48 54 55
    GeneralExpr <node> (59)
        on left: 60 61
        on right: 43 44 52 53 58 60 81 89
    Expr <node> (60)
        on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90
        on right: 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 91 92
    ExprList <node> (61)
        on left: 91 92
        on right: 82 91


State 0

    0 $accept: . Start $end

    error  shift, and go to state 1
    CHAR   shift, and go to state 2
    INT    shift, and go to state 3
    VOID   shift, and go to state 4

    Start                go to state 5
    FunctionDefinition   go to state 6
    FunctionDeclaration  go to state 7
    Declaration          go to state 8
    TypeSpec             go to state 9


State 1

   27 Declaration: error . SEMI

    SEMI  shift, and go to state 10


State 2

   30 TypeSpec: CHAR .

    $default  reduce using rule 30 (TypeSpec)


State 3

   31 TypeSpec: INT .

    $default  reduce using rule 31 (TypeSpec)


State 4

   32 TypeSpec: VOID .

    $default  reduce using rule 32 (TypeSpec)


State 5

    0 $accept: Start . $end
    1 Start: Start . FunctionDefinition
    2      | Start . FunctionDeclaration
    3      | Start . Declaration

    $end   shift, and go to state 11
    error  shift, and go to state 1
    CHAR   shift, and go to state 2
    INT    shift, and go to state 3
    VOID   shift, and go to state 4

    FunctionDefinition   go to state 12
    FunctionDeclaration  go to state 13
    Declaration          go to state 14
    TypeSpec             go to state 9


State 6

    4 Start: FunctionDefinition .

    $default  reduce using rule 4 (Start)


State 7

    5 Start: FunctionDeclaration .

    $default  reduce using rule 5 (Start)


State 8

    6 Start: Declaration .

    $default  reduce using rule 6 (Start)


State 9

    7 FunctionDefinition: TypeSpec . FunctionDeclarator FunctionBody
   17 FunctionDeclaration: TypeSpec . FunctionDeclarator SEMI
   26 Declaration: TypeSpec . DeclaratorList SEMI

    AST  shift, and go to state 15
    ID   shift, and go to state 16

    FunctionDeclarator  go to state 17
    DeclaratorList      go to state 18
    Declarator          go to state 19
    AstList             go to state 20


State 10

   27 Declaration: error SEMI .

    $default  reduce using rule 27 (Declaration)


State 11

    0 $accept: Start $end .

    $default  accept


State 12

    1 Start: Start FunctionDefinition .

    $default  reduce using rule 1 (Start)


State 13

    2 Start: Start FunctionDeclaration .

    $default  reduce using rule 2 (Start)


State 14

    3 Start: Start Declaration .

    $default  reduce using rule 3 (Start)


State 15

   38 AstList: AST .

    $default  reduce using rule 38 (AstList)


State 16

   19 FunctionDeclarator: ID . LPAR ParameterList RPAR
   34 Declarator: ID . LSQ INTLIT RSQ
   36           | ID .

    LPAR  shift, and go to state 21
    LSQ   shift, and go to state 22

    $default  reduce using rule 36 (Declarator)


State 17

    7 FunctionDefinition: TypeSpec FunctionDeclarator . FunctionBody
   17 FunctionDeclaration: TypeSpec FunctionDeclarator . SEMI

    LBRACE  shift, and go to state 23
    SEMI    shift, and go to state 24

    FunctionBody  go to state 25


State 18

   26 Declaration: TypeSpec DeclaratorList . SEMI
   28 DeclaratorList: DeclaratorList . COMMA Declarator

    COMMA  shift, and go to state 26
    SEMI   shift, and go to state 27


State 19

   29 DeclaratorList: Declarator .

    $default  reduce using rule 29 (DeclaratorList)


State 20

   18 FunctionDeclarator: AstList . ID LPAR ParameterList RPAR
   33 Declarator: AstList . ID LSQ INTLIT RSQ
   35           | AstList . ID
   37 AstList: AstList . AST

    AST  shift, and go to state 28
    ID   shift, and go to state 29


State 21

   19 FunctionDeclarator: ID LPAR . ParameterList RPAR

    CHAR  shift, and go to state 2
    INT   shift, and go to state 3
    VOID  shift, and go to state 4

    ParameterList         go to state 30
    ParameterDeclaration  go to state 31
    TypeSpec              go to state 32


State 22

   34 Declarator: ID LSQ . INTLIT RSQ

    INTLIT  shift, and go to state 33


State 23

    8 FunctionBody: LBRACE . DeclarationList StatementList RBRACE
    9             | LBRACE . DeclarationList RBRACE
   10             | LBRACE . StatementList RBRACE
   11             | LBRACE . RBRACE
   12             | LBRACE . error RBRACE

    error   shift, and go to state 34
    AMP     shift, and go to state 35
    AST     shift, and go to state 36
    CHAR    shift, and go to state 2
    FOR     shift, and go to state 37
    IF      shift, and go to state 38
    INT     shift, and go to state 3
    LBRACE  shift, and go to state 39
    LPAR    shift, and go to state 40
    MINUS   shift, and go to state 41
    NOT     shift, and go to state 42
    PLUS    shift, and go to state 43
    RBRACE  shift, and go to state 44
    RETURN  shift, and go to state 45
    VOID    shift, and go to state 4
    ID      shift, and go to state 46
    INTLIT  shift, and go to state 47
    CHRLIT  shift, and go to state 48
    STRLIT  shift, and go to state 49

    SEMI  reduce using rule 59 (ExprOpt)

    DeclarationList  go to state 50
    StatementList    go to state 51
    Declaration      go to state 52
    TypeSpec         go to state 53
    Statement        go to state 54
    ExprOpt          go to state 55
    GeneralExpr      go to state 56
    Expr             go to state 57


State 24

   17 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI .

    $default  reduce using rule 17 (FunctionDeclaration)


State 25

    7 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody .

    $default  reduce using rule 7 (FunctionDefinition)


State 26

   28 DeclaratorList: DeclaratorList COMMA . Declarator

    AST  shift, and go to state 15
    ID   shift, and go to state 58

    Declarator  go to state 59
    AstList     go to state 60


State 27

   26 Declaration: TypeSpec DeclaratorList SEMI .

    $default  reduce using rule 26 (Declaration)


State 28

   37 AstList: AstList AST .

    $default  reduce using rule 37 (AstList)


State 29

   18 FunctionDeclarator: AstList ID . LPAR ParameterList RPAR
   33 Declarator: AstList ID . LSQ INTLIT RSQ
   35           | AstList ID .

    LPAR  shift, and go to state 61
    LSQ   shift, and go to state 62

    $default  reduce using rule 35 (Declarator)


State 30

   19 FunctionDeclarator: ID LPAR ParameterList . RPAR
   20 ParameterList: ParameterList . COMMA ParameterDeclaration

    COMMA  shift, and go to state 63
    RPAR   shift, and go to state 64


State 31

   21 ParameterList: ParameterDeclaration .

    $default  reduce using rule 21 (ParameterList)


State 32

   22 ParameterDeclaration: TypeSpec . AstList ID
   23                     | TypeSpec . ID
   24                     | TypeSpec . AstList
   25                     | TypeSpec .

    AST  shift, and go to state 15
    ID   shift, and go to state 65

    $default  reduce using rule 25 (ParameterDeclaration)

    AstList  go to state 66


State 33

   34 Declarator: ID LSQ INTLIT . RSQ

    RSQ  shift, and go to state 67


State 34

   12 FunctionBody: LBRACE error . RBRACE
   27 Declaration: error . SEMI

    RBRACE  shift, and go to state 68
    SEMI    shift, and go to state 10


State 35

   76 Expr: AMP . Expr

    AMP     shift, and go to state 35
    AST     shift, and go to state 36
    LPAR    shift, and go to state 40
    MINUS   shift, and go to state 41
    NOT     shift, and go to state 42
    PLUS    shift, and go to state 43
    ID      shift, and go to state 46
    INTLIT  shift, and go to state 47
    CHRLIT  shift, and go to state 48
    STRLIT  shift, and go to state 49

    Expr  go to state 69


State 36

   77 Expr: AST . Expr

    AMP     shift, and go to state 35
    AST     shift, and go to state 36
    LPAR    shift, and go to state 40
    MINUS   shift, and go to state 41
    NOT     shift, and go to state 42
    PLUS    shift, and go to state 43
    ID      shift, and go to state 46
    INTLIT  shift, and go to state 47
    CHRLIT  shift, and go to state 48
    STRLIT  shift, and go to state 49

    Expr  go to state 70


State 37

   54 Statement: FOR . LPAR ExprOpt SEMI ExprOpt SEMI ExprOpt RPAR ErrStatement

    LPAR  shift, and go to state 71


State 38

   52 Statement: IF . LPAR GeneralExpr RPAR ErrStatement
   53          | IF . LPAR GeneralExpr RPAR ErrStatement ELSE ErrStatement

    LPAR  shift, and go to state 72


State 39

   49 Statement: LBRACE . StatList RBRACE
   50          | LBRACE . RBRACE
   51          | LBRACE . error RBRACE

    error   shift, and go to state 73
    AMP     shift, and go to state 35
    AST     shift, and go to state 36
    FOR     shift, and go to state 74
    IF      shift, and go to state 75
    LBRACE  shift, and go to state 76
    LPAR    shift, and go to state 40
    MINUS   shift, and go to state 41
    NOT     shift, and go to state 42
    PLUS    shift, and go to state 43
    RBRACE  shift, and go to state 77
    RETURN  shift, and go to state 78
    ID      shift, and go to state 46
    INTLIT  shift, and go to state 47
    CHRLIT  shift, and go to state 48
    STRLIT  shift, and go to state 49

    SEMI  reduce using rule 59 (ExprOpt)

    ErrStatement  go to state 79
    StatList      go to state 80
    ExprOpt       go to state 81
    GeneralExpr   go to state 56
    Expr          go to state 57


State 40

   89 Expr: LPAR . GeneralExpr RPAR
   90     | LPAR . error RPAR

    error   shift, and go to state 82
    AMP     shift, and go to state 35
    AST     shift, and go to state 36
    LPAR    shift, and go to state 40
    MINUS   shift, and go to state 41
    NOT     shift, and go to state 42
    PLUS    shift, and go to state 43
    ID      shift, and go to state 46
    INTLIT  shift, and go to state 47
    CHRLIT  shift, and go to state 48
    STRLIT  shift, and go to state 49

    GeneralExpr  go to state 83
    Expr         go to state 57


State 41

   79 Expr: MINUS . Expr

    AMP     shift, and go to state 35
    AST     shift, and go to state 36
    LPAR    shift, and go to state 40
    MINUS   shift, and go to state 41
    NOT     shift, and go to state 42
    PLUS    shift, and go to state 43
    ID      shift, and go to state 46
    INTLIT  shift, and go to state 47
    CHRLIT  shift, and go to state 48
    STRLIT  shift, and go to state 49

    Expr  go to state 84


State 42

   80 Expr: NOT . Expr

    AMP     shift, and go to state 35
    AST     shift, and go to state 36
    LPAR    shift, and go to state 40
    MINUS   shift, and go to state 41
    NOT     shift, and go to state 42
    PLUS    shift, and go to state 43
    ID      shift, and go to state 46
    INTLIT  shift, and go to state 47
    CHRLIT  shift, and go to state 48
    STRLIT  shift, and go to state 49

    Expr  go to state 85


State 43

   78 Expr: PLUS . Expr

    AMP     shift, and go to state 35
    AST     shift, and go to state 36
    LPAR    shift, and go to state 40
    MINUS   shift, and go to state 41
    NOT     shift, and go to state 42
    PLUS    shift, and go to state 43
    ID      shift, and go to state 46
    INTLIT  shift, and go to state 47
    CHRLIT  shift, and go to state 48
    STRLIT  shift, and go to state 49

    Expr  go to state 86


State 44

   11 FunctionBody: LBRACE RBRACE .

    $default  reduce using rule 11 (FunctionBody)


State 45

   55 Statement: RETURN . ExprOpt SEMI

    AMP     shift, and go to state 35
    AST     shift, and go to state 36
    LPAR    shift, and go to state 40
    MINUS   shift, and go to state 41
    NOT     shift, and go to state 42
    PLUS    shift, and go to state 43
    ID      shift, and go to state 46
    INTLIT  shift, and go to state 47
    CHRLIT  shift, and go to state 48
    STRLIT  shift, and go to state 49

    $default  reduce using rule 59 (ExprOpt)

    ExprOpt      go to state 87
    GeneralExpr  go to state 56
    Expr         go to state 57


State 46

   82 Expr: ID . LPAR ExprList RPAR
   83     | ID . LPAR RPAR
   84     | ID . LPAR error RPAR
   85     | ID .

    LPAR  shift, and go to state 88

    $default  reduce using rule 85 (Expr)


State 47

   86 Expr: INTLIT .

    $default  reduce using rule 86 (Expr)


State 48

   87 Expr: CHRLIT .

    $default  reduce using rule 87 (Expr)


State 49

   88 Expr: STRLIT .

    $default  reduce using rule 88 (Expr)


State 50

    8 FunctionBody: LBRACE DeclarationList . StatementList RBRACE
    9             | LBRACE DeclarationList . RBRACE
   13 DeclarationList: DeclarationList . Declaration

    error   shift, and go to state 1
    AMP     shift, and go to state 35
    AST     shift, and go to state 36
    CHAR    shift, and go to state 2
    FOR     shift, and go to state 37
    IF      shift, and go to state 38
    INT     shift, and go to state 3
    LBRACE  shift, and go to state 39
    LPAR    shift, and go to state 40
    MINUS   shift, and go to state 41
    NOT     shift, and go to state 42
    PLUS    shift, and go to state 43
    RBRACE  shift, and go to state 89
    RETURN  shift, and go to state 45
    VOID    shift, and go to state 4
    ID      shift, and go to state 46
    INTLIT  shift, and go to state 47
    CHRLIT  shift, and go to state 48
    STRLIT  shift, and go to state 49

    SEMI  reduce using rule 59 (ExprOpt)

    StatementList  go to state 90
    Declaration    go to state 91
    TypeSpec       go to state 53
    Statement      go to state 54
    ExprOpt        go to state 55
    GeneralExpr    go to state 56
    Expr           go to state 57


State 51

   10 FunctionBody: LBRACE StatementList . RBRACE
   15 StatementList: StatementList . ErrStatement
